Fixed collapse bug

--- a/site-flare/Content/Resources/Custom/custom.css
+++ b/site-flare/Content/Resources/Custom/custom.css
@@ -138,6 +138,7 @@
 }
 .content .main-section .sidenav-layout {
   height: calc(100vh - 70px - 3rem) !important;
+  position: relative;
 }
 MadCap|breadcrumbsProxy {
   border-bottom: none;
